[package]
name = "icon_utils"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for serializing icon transaction"
authors = ["Ewan Fox <ewan@ewanfox.com>"]
repository = "https://github.com/BananaSquares/icon-utils"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
eth-keystore = "0.5.0"
hex = "0.4.3"
k256 = {version = "0.11.6", features = ["ecdsa", "sha256"]}
serde = {version = "1.0.139", features=["derive"]}
sha3 = "0.10.6"
thiserror = "1.0"
