[package]
name = "icon_derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "macros used by icon-utils"
authors = ["Ewan Fox <ewan@ewanfox.com>"]
repository = "https://github.com/BananaSquares/icon-utils"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true
